# ChinaPubg

./: README.md  build.gradle  gradle.properties  local.properties  module.gradle  settings.gradle
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  MainEntry.cpp  export.map
module/src/main/cpp/include/: ConfigUtils.h  Engine.h  GameOffsets.h  JniHelper.h  Structs.h
module/src/main/cpp/include/ConfigManger/: ConfigManger.cpp  ConfigManger.h
module/src/main/cpp/include/Crc32Tools/: Crc32Tools.cpp  Crc32Tools.h
module/src/main/cpp/include/HideLibrary/: elf_util.cpp  elf_util.h  hide_utils.cpp  hide_utils.h
module/src/main/cpp/include/HookFramework/: And64InlineHook.cpp  Buffer.hpp  CydiaSubstrate.h  SubstrateARM.hpp  SubstrateDebug.cpp  SubstrateDebug.hpp  SubstrateHook.cpp  SubstrateLog.hpp  SubstratePosixMemory.cpp  SubstrateX86.hpp  elf_util.cpp  elf_util.h  symbol_resolver.cpp
module/src/main/cpp/include/Logger/: Logger.h
module/src/main/cpp/include/MainLooper/: MainLooper.cpp  MainLooper.h
module/src/main/cpp/include/MapTools/: MapTools.cpp  MapTools.h
module/src/main/cpp/include/MemoryTools/: MemoryTools.cpp  MemoryTools.h
module/src/main/cpp/include/PtraceInject/: PtraceInject.cpp  inject.cpp  inject.h  ptrace_utils.cpp  ptrace_utils.h
module/src/main/cpp/include/RecorderTools/: RecorderTools.cpp  RecorderTools.h
module/src/main/cpp/include/TencentSafe/: TencentSafe.cpp  TencentSafe.h
module/src/main/cpp/include/base64/: base64.cpp  base64.h
module/src/main/cpp/include/curl/: HttpUtils.h  RC4Utils.h  curl.h  curlbuild.h  curlrules.h  multi.h  system.h
module/src/main/cpp/include/filedata/: drawicon.cpp  files.h
module/src/main/cpp/include/imgui/: imgui.h  imgui_draw.cpp  imgui_expand.cpp  imgui_expand.h  imgui_widgets.cpp  stb_image.cpp
module/src/main/cpp/include/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp
module/src/main/cpp/include/netlink/: bionic_netlink.cpp  bionic_netlink.h  ifaddrs.cpp  ifaddrs.h
module/src/main/cpp/include/searchCall/: searchCall.cpp  searchCall.h
module/src/main/cpp/include/strnormalize/: strnormalize.cpp  strnormalize.h
module/src/main/cpp/src/: Draw.cpp  Draw.h  GameUtils.cpp  GameUtils.h  Menu.cpp  Menu.h
template/magisk_module/: customize.sh  service.sh  util_functions.sh  verify.sh
